# balerion-data

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: CHANGELOG.md  QUICKSTART.md  README.md  SCRIPTS.md
scripts/: check_data.py  collect_historical_data.py  config.py  mt5_utils.py  requirements.txt  setup.ps1  setup.sh  update_weekly_data.py
tests/: conftest.py  test_bar_quality.py
