[project]
name = "balerion-data"
version = "1.0.0"
description = "Data ingestion pipeline for the Balerion quant hedge fund"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Private" }
authors = [
    { name = "Balerion Fund" }
]

dependencies = [
    "MetaTrader5>=5.0.45",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]

[project.scripts]
collect-historical = "scripts.collect_historical_data:main"
update-weekly = "scripts.update_weekly_data:main"
check-data = "scripts.check_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
